mbtiles/tests/snapshots/copy__convert@v1__bbox__hash.snap
---
source: mbtiles/tests/copy.rs
expression: actual_value
---
- type: table
  tbl_name: metadata
  sql: "CREATE TABLE metadata (\n    name TEXT NOT NULL PRIMARY KEY,\n    value TEXT\n)"
  values:
    - "(  \"agg_tiles_hash\", \"012434681F0EBF296906D6608C54D632\"  )"
    - "(  \"hash_algorithm\", \"md5\"  )"
    - "(  \"md-edit\", \"value - v1\"  )"
    - "(  \"md-remove\", \"value - remove\"  )"
    - "(  \"md-same\", \"value - same\"  )"
- type: table
  tbl_name: tiles_with_hash
  sql: "CREATE TABLE tiles_with_hash (\n    zoom_level INTEGER NOT NULL,\n    tile_column INTEGER NOT NULL,\n    tile_row INTEGER NOT NULL,\n    tile_data BLOB,\n    tile_hash TEXT,\n    PRIMARY KEY (zoom_level, tile_column, tile_row)\n)"
  values:
    - "(  5, 1, 1, blob(edit-v1), \"EFE0AE5FD114DE99855BC2838BE97E1D\"  )"
    - "(  5, 1, 2, blob(), \"D41D8CD98F00B204E9800998ECF8427E\"  )"
    - "(  5, 2, 2, blob(remove), \"0F6969D7052DA9261E31DDB6E88C136E\"  )"
    - "(  6, 1, 4, blob(edit-v1), \"EFE0AE5FD114DE99855BC2838BE97E1D\"  )"
- type: index
  tbl_name: metadata
  sql: ~
  values: ~
- type: index
  tbl_name: tiles_with_hash
  sql: ~
  values: ~
- type: view
  tbl_name: tiles
  sql: "CREATE VIEW tiles AS\nSELECT\n    zoom_level,\n    tile_column,\n    tile_row,\n    tile_data\nFROM tiles_with_hash"
  values: ~
